implement bookings api
